reset app component to outlet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<button mat-stroked-button color="primary">
-  <mat-icon>face</mat-icon> Primary</button>
-
-<mat-divider></mat-divider>
-
-<mat-checkbox>Check me!</mat-checkbox>
+<router-outlet></router-outlet>
