--- a/src/app/contactmanager/components/toolbar/toolbar.component.html
+++ b/src/app/contactmanager/components/toolbar/toolbar.component.html
@@ -1,5 +1,6 @@
+<!-- Container for headers, titles or actions -->
 <mat-toolbar color="primary">
-  <button mat-button (click)="toggleSidenav.emit()">
+  <button mat-button class="sidenav-toggle" (click)="toggleSidenav.emit()">
     <mat-icon>menu</mat-icon>
   </button>
   <span>Contact Manager</span>
