--- a/src/app/contactmanager/components/sidenav/sidenav.component.html
+++ b/src/app/contactmanager/components/sidenav/sidenav.component.html
@@ -1,7 +1,7 @@
 <mat-drawer-container class="app-sidenav-container" autosize>
-  <mat-drawer #sidenav class="app-sidenav" [mode]="isScreenSmall() ? 'over' : 'side'" [opened]="!isScreenSmall()">
+  <mat-drawer #sidenav class="app-sidenav mat-elevation-z10" [mode]="isScreenSmall() ? 'over' : 'side'" [opened]="!isScreenSmall()">
 
-    <mat-toolbar color="primary">My Contacts</mat-toolbar>
+    <mat-toolbar color="primary">Contacts</mat-toolbar>
     <mat-list role="list">
       <mat-list-item role="listitem">Item 1</mat-list-item>
       <mat-list-item role="listitem">Item 2</mat-list-item>
