--- a/src/app/contactmanager/components/main-content/main-content.component.html
+++ b/src/app/contactmanager/components/main-content/main-content.component.html
@@ -20,7 +20,7 @@
         </mat-tab>
         <mat-tab label="notes">
           <p>
-            {{ user.bio }}
+            <app-notes [notes]="user.notes"></app-notes>
           </p>
         </mat-tab>
       </mat-tab-group>
