Implement table filtering

--- a/src/app/contactmanager/components/notes/notes.component.scss
+++ b/src/app/contactmanager/components/notes/notes.component.scss
@@ -1,3 +1,10 @@
+// Table style
 table {
+  width: 100%;
+}
+
+// Table feature: Filtering
+.mat-form-field {
+  font-size: 14px;
   width: 100%;
 }
