--- a/src/app/contactmanager/components/toolbar/toolbar.component.html
+++ b/src/app/contactmanager/components/toolbar/toolbar.component.html
@@ -4,4 +4,14 @@
     <mat-icon>menu</mat-icon>
   </button>
   <span>Contact Manager</span>
+
+  <span class="example-spacer"></span>
+  <button mat-button [matMenuTriggerFor]="menu">
+    <mat-icon>more_vert</mat-icon>
+  </button>
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item (click)="openNewContactDialog()">New Contact</button>
+    <button mat-menu-item>Exit</button>
+  </mat-menu>
+
 </mat-toolbar>
