--- a/src/app/contactmanager/components/toolbar/toolbar.component.scss
+++ b/src/app/contactmanager/components/toolbar/toolbar.component.scss
@@ -1,5 +1,10 @@
 $iconWidth: 56px;
 
+// Right-side Menu
+.example-spacer {
+  flex: 1 1 auto;
+}
+
 .sidenav-toggle {
   display: none;
   padding: 0;
