Add a name validator in the form

--- a/src/app/contactmanager/components/contact-dialog/contact-dialog.component.html
+++ b/src/app/contactmanager/components/contact-dialog/contact-dialog.component.html
@@ -19,7 +19,8 @@
     <!-- Name -->
     <mat-form-field appearance="standard">
       <mat-label>Name</mat-label>
-      <input matInput [(ngModel)]="user.name">
+      <input matInput [(ngModel)]="user.name" [formControl]="username" required>
+      <mat-error *ngIf="username.invalid">{{getErrorMessage()}}</mat-error>
     </mat-form-field>
     <br>
     <!-- Biography -->
