--- a/src/app/contactmanager/components/contact-dialog/contact-dialog.component.html
+++ b/src/app/contactmanager/components/contact-dialog/contact-dialog.component.html
@@ -28,7 +28,17 @@
       <mat-label>Bio</mat-label>
       <textarea matInput [(ngModel)]="user.bio"></textarea>
     </mat-form-field>
+    <br>
+
+    <!-- Date -->
+    <mat-form-field appearance="standard">
+      <mat-label>Birthdate</mat-label>
+      <input matInput [matDatepicker]="picker" [(ngModel)]="user.birthDate">
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
   </div>    
+
 
 </div>
 
