Create theme toggle and lft/rtl toggler

--- a/src/app/contactmanager/components/toolbar/toolbar.component.html
+++ b/src/app/contactmanager/components/toolbar/toolbar.component.html
@@ -11,7 +11,8 @@
   </button>
   <mat-menu #menu="matMenu">
     <button mat-menu-item (click)="openNewContactDialog()">New Contact</button>
-    <button mat-menu-item>Exit</button>
+    <button mat-menu-item (click)="toggleTheme.emit()">Toggle Theme</button>
+    <button mat-menu-item (click)="toggleDirection.emit()">Toggle Direction</button>
   </mat-menu>
 
 </mat-toolbar>
