--- a/src/app/contactmanager/components/sidenav/sidenav.component.html
+++ b/src/app/contactmanager/components/sidenav/sidenav.component.html
@@ -1,13 +1,14 @@
-<mat-sidenav-container class="app-sidenav-container" autosize>
-  <mat-sidenav #sidenav class="app-sidenav mat-elevation-z10" [mode]="isScreenSmall() ? 'over' : 'side'" [opened]="!isScreenSmall()">
+<mat-sidenav-container class="app-sidenav-container" [class.dark-theme]="isDarkTheme" [dir]="dir" autosize>
+  <mat-sidenav #sidenav class="app-sidenav mat-elevation-z10" [mode]="isScreenSmall() ? 'over' : 'side'"
+    [opened]="!isScreenSmall()">
 
     <mat-toolbar color="primary">Contacts</mat-toolbar>
 
     <mat-nav-list>
       <mat-list-item *ngFor="let user of $users | async">
-         <a matLine [routerLink]="['/contactmanager', user.id]">
+        <a matLine [routerLink]="['/contactmanager', user.id]">
           <mat-icon svgIcon="{{user.avatar}}"></mat-icon> {{ user.name }}
-          </a>
+        </a>
       </mat-list-item>
     </mat-nav-list>
 
@@ -16,7 +17,7 @@
   <div class="app-sidenav-content">
 
     <!-- Toolbar component at the top -->
-    <app-toolbar (toggleSidenav)="sidenav.toggle()"></app-toolbar>
+    <app-toolbar (toggleSidenav)="sidenav.toggle()" (toggleTheme)="toggleTheme()" (toggleDirection)="toggleDirection()"></app-toolbar>
     <!-- Child components of contactmanager app -->
     <div class="wrapper">
       <router-outlet></router-outlet>
